--- a/notebooks/00_Preprocessing_and_Scheduling/00_Data Preparation.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/00_Data Preparation.ipynb
@@ -13,25 +13,21 @@
    "id": "f51ef995b478e9c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:34:55.590249Z",
-     "start_time": "2025-07-25T15:34:55.588063Z"
+     "end_time": "2025-07-25T15:51:08.591866Z",
+     "start_time": "2025-07-25T15:51:08.589605Z"
     }
    },
    "source": [
     "import json\n",
-    "import re\n",
-    "\n",
-    "# data access\n",
-    "from configs.path_manager import get_path\n",
     "\n",
     "# utils\n",
     "from src.utils.converter import *\n",
     "\n",
-    "# Database\n",
-    "# from db_models import *\n"
+    "# data access\n",
+    "from configs.path_manager import get_path"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 35
   },
   {
    "cell_type": "markdown",
@@ -44,23 +40,23 @@
    "id": "dd5bfcd2-c77c-45c2-a9a5-51e6ab68dd5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:34:55.603973Z",
-     "start_time": "2025-07-25T15:34:55.602276Z"
+     "end_time": "2025-07-25T15:51:08.599807Z",
+     "start_time": "2025-07-25T15:51:08.597991Z"
     }
    },
    "source": [
     "basic_data_path = get_path(\"data\", \"basic\")"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 36
   },
   {
    "cell_type": "code",
    "id": "9ddc890411927d0e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:34:55.611340Z",
-     "start_time": "2025-07-25T15:34:55.608485Z"
+     "end_time": "2025-07-25T15:51:08.616358Z",
+     "start_time": "2025-07-25T15:51:08.613578Z"
     }
    },
    "source": [
@@ -182,7 +178,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -195,8 +191,8 @@
    "id": "2e1c7bbc5429247d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:43:17.477810Z",
-     "start_time": "2025-07-25T15:43:17.473919Z"
+     "end_time": "2025-07-25T15:51:08.626899Z",
+     "start_time": "2025-07-25T15:51:08.622776Z"
     }
    },
    "source": [
@@ -268,7 +264,7 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 38
   },
   {
    "cell_type": "markdown",
@@ -281,8 +277,8 @@
    "id": "bae567478d378ced",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:34:55.653680Z",
-     "start_time": "2025-07-25T15:34:55.650275Z"
+     "end_time": "2025-07-25T15:51:08.637432Z",
+     "start_time": "2025-07-25T15:51:08.634254Z"
     }
    },
    "source": [
@@ -310,13 +306,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:42:50.455937Z",
-     "start_time": "2025-07-25T15:42:50.448369Z"
+     "end_time": "2025-07-25T15:51:08.664467Z",
+     "start_time": "2025-07-25T15:51:08.656677Z"
     }
    },
    "cell_type": "code",
@@ -348,7 +344,7 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 40
   },
   {
    "metadata": {},
@@ -359,19 +355,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:40:27.250405Z",
-     "start_time": "2025-07-25T15:40:27.215130Z"
+     "end_time": "2025-07-25T15:51:08.707990Z",
+     "start_time": "2025-07-25T15:51:08.672102Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 24,
    "source": [
     "file_path = basic_data_path / \"jobshop_instances.json\"\n",
     "with open(file_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(instances_dict, f, indent=2)"
    ],
-   "id": "c812b11e-319a-4805-9d43-8e4fa63ab214"
+   "id": "c812b11e-319a-4805-9d43-8e4fa63ab214",
+   "outputs": [],
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -388,8 +384,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:48:15.389783Z",
-     "start_time": "2025-07-25T15:48:15.383371Z"
+     "end_time": "2025-07-25T15:51:08.720435Z",
+     "start_time": "2025-07-25T15:51:08.714507Z"
     }
    },
    "cell_type": "code",
@@ -527,25 +523,25 @@
        "</div>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 42
   },
   {
    "cell_type": "code",
    "id": "3f659236-5633-48fc-be7d-41ef2ad4f62a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:48:17.199667Z",
-     "start_time": "2025-07-25T15:48:17.196661Z"
+     "end_time": "2025-07-25T15:51:08.747012Z",
+     "start_time": "2025-07-25T15:51:08.744368Z"
     }
    },
    "source": "df_routings_ft10.to_csv(basic_data_path / \"routings_ft10.csv\", index = False)",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 43
   }
  ],
  "metadata": {
