--- a/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
@@ -19,8 +19,8 @@
    "id": "1eda0ef8-5183-467a-96bd-bce98831664d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:16.763744Z",
-     "start_time": "2025-07-25T17:14:16.760803Z"
+     "end_time": "2025-07-25T17:26:41.328311Z",
+     "start_time": "2025-07-25T17:26:41.325167Z"
     }
    },
    "source": [
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.176541Z",
-     "start_time": "2025-07-25T17:14:16.766003Z"
+     "end_time": "2025-07-25T17:26:41.720276Z",
+     "start_time": "2025-07-25T17:26:41.330955Z"
     }
    },
    "cell_type": "code",
@@ -59,7 +59,7 @@
     "\n",
     "# solver\n",
     "from src.solvers.formatter import *\n",
-    "from src.solvers.heuristics.first_come_first_serve import schedule as solve_fcfs\n"
+    "from src.solvers.heuristics.first_come_first_serve import solve as solve_fcfs\n"
    ],
    "id": "71be61b69169ecb8",
    "outputs": [],
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.258534Z",
-     "start_time": "2025-07-25T17:14:17.246644Z"
+     "end_time": "2025-07-25T17:26:41.805740Z",
+     "start_time": "2025-07-25T17:26:41.792983Z"
     }
    },
    "cell_type": "code",
@@ -226,8 +226,8 @@
    "id": "a2b80695-3f05-43b1-b376-5776d653fde7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.289185Z",
-     "start_time": "2025-07-25T17:14:17.281660Z"
+     "end_time": "2025-07-25T17:26:41.845985Z",
+     "start_time": "2025-07-25T17:26:41.837159Z"
     }
    },
    "source": [
@@ -420,8 +420,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:43.668581Z",
-     "start_time": "2025-07-25T17:14:43.658847Z"
+     "end_time": "2025-07-25T17:26:41.875363Z",
+     "start_time": "2025-07-25T17:26:41.867335Z"
     }
    },
    "cell_type": "code",
@@ -536,18 +536,18 @@
        "  (9, 'M07', 45)]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:15:05.879116Z",
-     "start_time": "2025-07-25T17:15:05.873570Z"
+     "end_time": "2025-07-25T17:26:41.943506Z",
+     "start_time": "2025-07-25T17:26:41.937495Z"
     }
    },
    "cell_type": "code",
@@ -673,18 +673,18 @@
        " ('J25-0009', 9, 'M07', 1217, 45, 1262)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:15:24.908036Z",
-     "start_time": "2025-07-25T17:15:24.901865Z"
+     "end_time": "2025-07-25T17:26:41.988779Z",
+     "start_time": "2025-07-25T17:26:41.983270Z"
     }
    },
    "cell_type": "code",
@@ -845,18 +845,18 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.758586Z",
-     "start_time": "2025-07-25T17:14:17.562764Z"
+     "end_time": "2025-07-25T17:26:42.228481Z",
+     "start_time": "2025-07-25T17:26:42.051039Z"
     }
    },
    "cell_type": "code",
@@ -874,13 +874,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.948217Z",
-     "start_time": "2025-07-25T17:14:17.787869Z"
+     "end_time": "2025-07-25T17:26:42.513264Z",
+     "start_time": "2025-07-25T17:26:42.255607Z"
     }
    },
    "cell_type": "code",
@@ -898,13 +898,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:14:17.979479Z",
-     "start_time": "2025-07-25T17:14:17.965724Z"
+     "end_time": "2025-07-25T17:26:42.549222Z",
+     "start_time": "2025-07-25T17:26:42.518734Z"
     }
    },
    "cell_type": "code",
@@ -930,12 +930,12 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   }
  ],
  "metadata": {
