--- a/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
@@ -19,8 +19,8 @@
    "id": "1eda0ef8-5183-467a-96bd-bce98831664d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.328311Z",
-     "start_time": "2025-07-25T17:26:41.325167Z"
+     "end_time": "2025-07-25T19:49:54.088835Z",
+     "start_time": "2025-07-25T19:49:54.085972Z"
     }
    },
    "source": [
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.720276Z",
-     "start_time": "2025-07-25T17:26:41.330955Z"
+     "end_time": "2025-07-25T19:49:54.533469Z",
+     "start_time": "2025-07-25T19:49:54.104836Z"
     }
    },
    "cell_type": "code",
@@ -58,7 +58,8 @@
     "from configs.path_manager import get_path\n",
     "\n",
     "# solver\n",
-    "from src.solvers.formatter import *\n",
+    "from src.solvers.builder import get_job_ops_model_from_dframe\n",
+    "from src.solvers.schedule_converter import get_schedule_dframe\n",
     "from src.solvers.heuristics.first_come_first_serve import solve as solve_fcfs\n"
    ],
    "id": "71be61b69169ecb8",
@@ -66,12 +67,7 @@
    "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.805740Z",
-     "start_time": "2025-07-25T17:26:41.792983Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Datei laden\n",
@@ -226,8 +222,8 @@
    "id": "a2b80695-3f05-43b1-b376-5776d653fde7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.845985Z",
-     "start_time": "2025-07-25T17:26:41.837159Z"
+     "end_time": "2025-07-25T19:49:54.630677Z",
+     "start_time": "2025-07-25T19:49:54.621822Z"
     }
    },
    "source": [
@@ -420,8 +416,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.875363Z",
-     "start_time": "2025-07-25T17:26:41.867335Z"
+     "end_time": "2025-07-25T19:49:54.704399Z",
+     "start_time": "2025-07-25T19:49:54.695041Z"
     }
    },
    "cell_type": "code",
@@ -546,8 +542,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.943506Z",
-     "start_time": "2025-07-25T17:26:41.937495Z"
+     "end_time": "2025-07-25T19:49:54.776488Z",
+     "start_time": "2025-07-25T19:49:54.769660Z"
     }
    },
    "cell_type": "code",
@@ -683,8 +679,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:41.988779Z",
-     "start_time": "2025-07-25T17:26:41.983270Z"
+     "end_time": "2025-07-25T19:49:54.878270Z",
+     "start_time": "2025-07-25T19:49:54.871742Z"
     }
    },
    "cell_type": "code",
@@ -855,8 +851,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:42.228481Z",
-     "start_time": "2025-07-25T17:26:42.051039Z"
+     "end_time": "2025-07-25T19:49:55.150272Z",
+     "start_time": "2025-07-25T19:49:54.951727Z"
     }
    },
    "cell_type": "code",
@@ -879,8 +875,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:42.513264Z",
-     "start_time": "2025-07-25T17:26:42.255607Z"
+     "end_time": "2025-07-25T19:49:55.349501Z",
+     "start_time": "2025-07-25T19:49:55.184251Z"
     }
    },
    "cell_type": "code",
@@ -903,8 +899,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T17:26:42.549222Z",
-     "start_time": "2025-07-25T17:26:42.518734Z"
+     "end_time": "2025-07-25T19:49:55.367483Z",
+     "start_time": "2025-07-25T19:49:55.353198Z"
     }
    },
    "cell_type": "code",
