--- a/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/01_FCFS Scheduling.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "# solver\n",
     "from src.solvers.builder import get_job_ops_model_from_dframe\n",
-    "from src.solvers.schedule_converter import get_schedule_dframe\n",
+    "from src.solvers.converter import get_schedule_dframe\n",
     "from src.solvers.heuristics.first_come_first_serve import solve as solve_fcfs\n"
    ],
    "id": "71be61b69169ecb8",
