--- a/notebooks/00_Preprocessing_and_Scheduling/02_Makespan_TODO.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/02_Makespan_TODO.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# solver\n",
     "from src.solvers.builder import get_job_ops_model_from_dframe\n",
-    "from src.solvers.schedule_converter import get_schedule_dframe\n",
+    "from src.solvers.converter import get_schedule_dframe\n",
     "from src.solvers.lp.makespan import solve_jssp_makespan\n",
     "\n",
     "# data access\n",
