--- a/notebooks/00_Preprocessing_and_Scheduling/11_Deadline_by_FCFS_Simulation.ipynb
+++ b/notebooks/00_Preprocessing_and_Scheduling/11_Deadline_by_FCFS_Simulation.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:44:22.879650Z",
-     "start_time": "2025-07-26T21:44:22.876357Z"
+     "end_time": "2025-07-27T00:09:41.168909Z",
+     "start_time": "2025-07-27T00:09:40.736423Z"
     }
    },
    "source": [
@@ -20,7 +20,7 @@
     "from src.utils.editor import enrich_dataframe_with_second\n",
     "from src.utils.initialization import jobs_jssp_init as init\n",
     "\n",
-    "from src.utils.initialization.gen_deadlines import get_temporary_df_times_from_schedule, improve_created_deadlines\n",
+    "from src.utils.initialization.gen_deadlines import get_temporary_df_times_from_schedule, ensure_reasonable_deadlines\n",
     "from src.utils.analysis_basics.plotfigures import empirical_flow_budget_distributions\n",
     "from src.utils.initialization.gen_deadlines import add_groupwise_lognormal_deadlines_by_group_mean\n",
     "\n",
@@ -34,13 +34,13 @@
     "pd.set_option('display.max_rows', 16)\n"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:25:59.902418Z",
-     "start_time": "2025-07-26T20:25:59.893324Z"
+     "end_time": "2025-07-27T00:09:41.192522Z",
+     "start_time": "2025-07-27T00:09:41.181246Z"
     }
    },
    "cell_type": "code",
@@ -206,8 +206,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:03.634943Z",
-     "start_time": "2025-07-26T20:25:59.924358Z"
+     "end_time": "2025-07-27T00:09:45.285461Z",
+     "start_time": "2025-07-27T00:09:41.281741Z"
     }
    },
    "cell_type": "code",
@@ -376,8 +376,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:03.658133Z",
-     "start_time": "2025-07-26T20:26:03.652354Z"
+     "end_time": "2025-07-27T00:09:45.306749Z",
+     "start_time": "2025-07-27T00:09:45.301813Z"
     }
    },
    "cell_type": "code",
@@ -557,8 +557,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:03.765404Z",
-     "start_time": "2025-07-26T20:26:03.746649Z"
+     "end_time": "2025-07-27T00:09:45.410278Z",
+     "start_time": "2025-07-27T00:09:45.391591Z"
     }
    },
    "cell_type": "code",
@@ -782,8 +782,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:06.739179Z",
-     "start_time": "2025-07-26T20:26:03.818399Z"
+     "end_time": "2025-07-27T00:09:48.568001Z",
+     "start_time": "2025-07-27T00:09:45.497627Z"
     }
    },
    "cell_type": "code",
@@ -798,8 +798,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:06.799319Z",
-     "start_time": "2025-07-26T20:26:06.746172Z"
+     "end_time": "2025-07-27T00:09:48.651761Z",
+     "start_time": "2025-07-27T00:09:48.590826Z"
     }
    },
    "cell_type": "code",
@@ -990,8 +990,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:30:45.913145Z",
-     "start_time": "2025-07-26T20:30:45.887457Z"
+     "end_time": "2025-07-27T00:09:48.716930Z",
+     "start_time": "2025-07-27T00:09:48.693808Z"
     }
    },
    "cell_type": "code",
@@ -1229,18 +1229,18 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T20:26:52.717764Z",
-     "start_time": "2025-07-26T20:26:52.715020Z"
+     "end_time": "2025-07-27T00:09:48.737906Z",
+     "start_time": "2025-07-27T00:09:48.735034Z"
     }
    },
    "cell_type": "code",
@@ -1250,13 +1250,13 @@
    ],
    "id": "fd8662b5778b1421",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:21:16.910459Z",
-     "start_time": "2025-07-26T21:21:16.881506Z"
+     "end_time": "2025-07-27T00:09:48.835068Z",
+     "start_time": "2025-07-27T00:09:48.806662Z"
     }
    },
    "cell_type": "code",
@@ -1437,18 +1437,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:39:05.500028Z",
-     "start_time": "2025-07-26T21:39:04.742454Z"
+     "end_time": "2025-07-27T00:09:49.915761Z",
+     "start_time": "2025-07-27T00:09:48.941468Z"
     }
    },
    "cell_type": "code",
@@ -1469,7 +1469,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -1480,8 +1480,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:40:54.985130Z",
-     "start_time": "2025-07-26T21:40:54.969121Z"
+     "end_time": "2025-07-27T00:09:49.983198Z",
+     "start_time": "2025-07-27T00:09:49.964962Z"
     }
    },
    "cell_type": "code",
@@ -1691,12 +1691,12 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -1707,8 +1707,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:42:02.766566Z",
-     "start_time": "2025-07-26T21:42:01.770637Z"
+     "end_time": "2025-07-27T00:09:51.124146Z",
+     "start_time": "2025-07-27T00:09:50.170691Z"
     }
    },
    "cell_type": "code",
@@ -1729,7 +1729,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 19
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -1740,19 +1740,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:54:40.051778Z",
-     "start_time": "2025-07-26T21:54:40.047899Z"
+     "end_time": "2025-07-27T00:10:07.839871Z",
+     "start_time": "2025-07-27T00:10:07.831766Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# min. 100 % of processing time for each job is covered in best-case\n",
-    "df_jobs_times_final = improve_created_deadlines(df_jobs_times, min_covered_proc_times_percentage = 1.0)\n",
+    "df_jobs_times_final = ensure_reasonable_deadlines(df_jobs_times, min_coverage = 1.0)\n",
     "\n",
     "diff_count = (df_jobs_times_final[\"Deadline\"] != df_jobs_times[\"Deadline\"]).sum()\n",
     "\n",
     "# Info: Compare the \"Deadline\" column\n",
-    "print(f\"Number of different entries in 'Deadline': {diff_count}\")"
+    "print(f\"Number of different entries in 'Deadline': {diff_count}\")\n",
+    "\n",
+    "df_jobs_times_final"
    ],
    "id": "a186cc88732448cd",
    "outputs": [
@@ -1762,9 +1764,184 @@
      "text": [
       "Number of different entries in 'Deadline': 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "           Job  Routing_ID  Arrival  Ready Time  Job Processing Time  Deadline\n",
+       "0     J25-0000           8       79        1440                  597      3660\n",
+       "1     J25-0001           6      129        1440                  416      2338\n",
+       "2     J25-0002           0      198        1440                  395      3744\n",
+       "3     J25-0003           2      243        1440                  568      3379\n",
+       "4     J25-0004           3      287        1440                  655      4856\n",
+       "5     J25-0005           1      498        1440                  510      3106\n",
+       "...        ...         ...      ...         ...                  ...       ...\n",
+       "7244  J25-7244           3   518085      518400                  655    520389\n",
+       "7245  J25-7245           9   518089      518400                  540    519640\n",
+       "7246  J25-7246           6   518116      518400                  416    520157\n",
+       "7247  J25-7247           1   518184      518400                  510    520172\n",
+       "7248  J25-7248           0   518188      518400                  395    520490\n",
+       "7249  J25-7249           4   518302      518400                  393    522163\n",
+       "\n",
+       "[7250 rows x 6 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Routing_ID</th>\n",
+       "      <th>Arrival</th>\n",
+       "      <th>Ready Time</th>\n",
+       "      <th>Job Processing Time</th>\n",
+       "      <th>Deadline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>J25-0000</td>\n",
+       "      <td>8</td>\n",
+       "      <td>79</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>597</td>\n",
+       "      <td>3660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>J25-0001</td>\n",
+       "      <td>6</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>416</td>\n",
+       "      <td>2338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>J25-0002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>198</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>395</td>\n",
+       "      <td>3744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>J25-0003</td>\n",
+       "      <td>2</td>\n",
+       "      <td>243</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>568</td>\n",
+       "      <td>3379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>J25-0004</td>\n",
+       "      <td>3</td>\n",
+       "      <td>287</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>655</td>\n",
+       "      <td>4856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>J25-0005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>498</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>510</td>\n",
+       "      <td>3106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7244</th>\n",
+       "      <td>J25-7244</td>\n",
+       "      <td>3</td>\n",
+       "      <td>518085</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>655</td>\n",
+       "      <td>520389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7245</th>\n",
+       "      <td>J25-7245</td>\n",
+       "      <td>9</td>\n",
+       "      <td>518089</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>540</td>\n",
+       "      <td>519640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7246</th>\n",
+       "      <td>J25-7246</td>\n",
+       "      <td>6</td>\n",
+       "      <td>518116</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>416</td>\n",
+       "      <td>520157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7247</th>\n",
+       "      <td>J25-7247</td>\n",
+       "      <td>1</td>\n",
+       "      <td>518184</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>510</td>\n",
+       "      <td>520172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7248</th>\n",
+       "      <td>J25-7248</td>\n",
+       "      <td>0</td>\n",
+       "      <td>518188</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>395</td>\n",
+       "      <td>520490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7249</th>\n",
+       "      <td>J25-7249</td>\n",
+       "      <td>4</td>\n",
+       "      <td>518302</td>\n",
+       "      <td>518400</td>\n",
+       "      <td>393</td>\n",
+       "      <td>522163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7250 rows × 6 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1775,8 +1952,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-26T21:54:48.302794Z",
-     "start_time": "2025-07-26T21:54:48.248664Z"
+     "end_time": "2025-07-27T00:10:10.003141Z",
+     "start_time": "2025-07-27T00:10:09.949965Z"
     }
    },
    "cell_type": "code",
@@ -1787,7 +1964,7 @@
    ],
    "id": "7d01027754f0db3",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 16
   }
  ],
  "metadata": {
