--- a/notebooks/02_Google_OR-Tools_Constraint_Programming/01_Lateness.ipynb
+++ b/notebooks/02_Google_OR-Tools_Constraint_Programming/01_Lateness.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "# Solver\n",
     "from src.solvers.converter import get_job_ops_dict, get_times_dict, get_schedule_dframe, get_active_ops\n",
-    "from src.solvers.cp.main_solvers import solve_jssp_lateness_with_start_deviation\n",
+    "from src.solvers.cp.lateness import solve_jssp_lateness_with_start_deviation\n",
     "\n",
     "# Simulation\n",
     "from src.simulation.ProductionRollingSimulation import ProductionSimulation\n",
