--- a/notebooks/00_Data Preparation and Preprocessing/01_Data Exploration with FCFS.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/01_Data Exploration with FCFS.ipynb
@@ -19,8 +19,8 @@
    "id": "1eda0ef8-5183-467a-96bd-bce98831664d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.088835Z",
-     "start_time": "2025-07-25T19:49:54.085972Z"
+     "end_time": "2025-07-27T18:29:00.309779Z",
+     "start_time": "2025-07-27T18:29:00.306850Z"
     }
    },
    "source": [
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.533469Z",
-     "start_time": "2025-07-25T19:49:54.104836Z"
+     "end_time": "2025-07-27T18:29:00.738844Z",
+     "start_time": "2025-07-27T18:29:00.312340Z"
     }
    },
    "cell_type": "code",
@@ -58,7 +58,7 @@
     "from configs.path_manager import get_path\n",
     "\n",
     "# solver\n",
-    "from src.solvers.builder import get_job_ops_model_from_dframe\n",
+    "from src.solvers.converter import get_job_ops_dict\n",
     "from src.solvers.converter import get_schedule_dframe\n",
     "from src.solvers.heuristics.first_come_first_serve import solve as solve_fcfs\n"
    ],
@@ -67,7 +67,12 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-27T18:29:00.827592Z",
+     "start_time": "2025-07-27T18:29:00.813066Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Datei laden\n",
@@ -222,8 +227,8 @@
    "id": "a2b80695-3f05-43b1-b376-5776d653fde7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.630677Z",
-     "start_time": "2025-07-25T19:49:54.621822Z"
+     "end_time": "2025-07-27T18:29:00.867549Z",
+     "start_time": "2025-07-27T18:29:00.859536Z"
     }
    },
    "source": [
@@ -416,13 +421,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.704399Z",
-     "start_time": "2025-07-25T19:49:54.695041Z"
+     "end_time": "2025-07-27T18:29:00.923152Z",
+     "start_time": "2025-07-27T18:29:00.915207Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "job_ops = get_job_ops_model_from_dframe(df_jssp)\n",
+    "job_ops = get_job_ops_dict(df_jssp)\n",
     "job_ops"
    ],
    "id": "feeb0a168df1a01b",
@@ -542,8 +547,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.776488Z",
-     "start_time": "2025-07-25T19:49:54.769660Z"
+     "end_time": "2025-07-27T18:29:01.033147Z",
+     "start_time": "2025-07-27T18:29:01.027802Z"
     }
    },
    "cell_type": "code",
@@ -679,8 +684,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:54.878270Z",
-     "start_time": "2025-07-25T19:49:54.871742Z"
+     "end_time": "2025-07-27T18:29:01.105494Z",
+     "start_time": "2025-07-27T18:29:01.099194Z"
     }
    },
    "cell_type": "code",
@@ -851,8 +856,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:55.150272Z",
-     "start_time": "2025-07-25T19:49:54.951727Z"
+     "end_time": "2025-07-27T18:29:01.390787Z",
+     "start_time": "2025-07-27T18:29:01.206935Z"
     }
    },
    "cell_type": "code",
@@ -875,8 +880,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:55.349501Z",
-     "start_time": "2025-07-25T19:49:55.184251Z"
+     "end_time": "2025-07-27T18:29:01.584340Z",
+     "start_time": "2025-07-27T18:29:01.409669Z"
     }
    },
    "cell_type": "code",
@@ -899,8 +904,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:49:55.367483Z",
-     "start_time": "2025-07-25T19:49:55.353198Z"
+     "end_time": "2025-07-27T18:29:01.610Z",
+     "start_time": "2025-07-27T18:29:01.596235Z"
     }
    },
    "cell_type": "code",
