--- a/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
+++ b/notebooks/00_Data Preparation and Preprocessing/02_Arrivals_based_on_Munkelt.ipynb
@@ -4,17 +4,15 @@
    "cell_type": "markdown",
    "id": "4f2e40c8-522b-4948-996a-e8a0cd97684b",
    "metadata": {},
-   "source": [
-    "# Zwischenankunktszeiten"
-   ]
+   "source": "# Intermediate arrival times"
   },
   {
    "cell_type": "code",
    "id": "e2e3a8be-dd30-4799-a3f3-3a3f46863370",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:58:25.244201Z",
-     "start_time": "2025-07-25T19:58:25.241938Z"
+     "end_time": "2025-07-27T21:02:37.371941Z",
+     "start_time": "2025-07-27T21:02:37.185830Z"
     }
    },
    "source": [
@@ -26,19 +24,19 @@
     "from src.utils.initialization import jobs_jssp_init as init, arrivals_init as term"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "9d982257-9f3a-4c4a-adb6-9b4b25362d3c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:02.042926Z",
-     "start_time": "2025-07-25T19:59:02.031799Z"
+     "end_time": "2025-07-27T21:02:37.387584Z",
+     "start_time": "2025-07-27T21:02:37.376423Z"
     }
    },
    "source": [
-    "# Datei laden\n",
+    "# Load file\n",
     "basic_data_path = get_path(\"data\", \"basic\")\n",
     "df_routings = pd.read_csv(basic_data_path / \"routings_ft10.csv\")\n",
     "df_routings"
@@ -171,44 +169,38 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
    "id": "3d93bc0f-0558-40e4-abc7-b7c44a2ed90a",
    "metadata": {},
-   "source": [
-    "## I) Mittlere Zwischenankunftszeit t_a"
-   ]
+   "source": "## I) Average arrival time t_a"
   },
   {
    "cell_type": "markdown",
    "id": "44ecaec2-4196-44ff-a928-b6b6c8f02380",
    "metadata": {},
-   "source": [
-    "### 1. Vektor der Bearbeitungszeiten auf der Engpassmaschine"
-   ]
+   "source": "### 1. Vector of processing times on the bottleneck machine (Engpassmaschine)"
   },
   {
    "cell_type": "markdown",
    "id": "ad7b63e3-a182-481a-b69e-02b6982dd86a",
    "metadata": {},
-   "source": [
-    "#### a) Bestimmung der Engpassmaschine (7.12)"
-   ]
+   "source": "#### a) Identification of the bottleneck machine (7.12)"
   },
   {
    "cell_type": "code",
    "id": "a4cb86b8-33d2-4801-ad73-026104f7a320",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:12.366382Z",
-     "start_time": "2025-07-25T19:59:12.362032Z"
+     "end_time": "2025-07-27T21:02:37.506784Z",
+     "start_time": "2025-07-27T21:02:37.500779Z"
     }
    },
    "source": [
@@ -239,28 +231,26 @@
        "'M03'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
    "id": "515dbca0-74bc-4c56-aa47-c763778e35e1",
    "metadata": {},
-   "source": [
-    "#### b) Vektor der Bearbeitungszeiten auf der Engpassmaschine erstellen"
-   ]
+   "source": "#### b) Create vector of processing times on the bottleneck machine"
   },
   {
    "cell_type": "code",
    "id": "35ba0bb2-5bdc-45b5-9a1c-4d6fd4cf3414",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:17.749787Z",
-     "start_time": "2025-07-25T19:59:17.744939Z"
+     "end_time": "2025-07-27T21:02:37.536050Z",
+     "start_time": "2025-07-27T21:02:37.531173Z"
     }
    },
    "source": [
@@ -274,32 +264,30 @@
        "[36, 69, 39, 98, 26, 95, 61, 79, 76, 52]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
    "id": "cd2b440d-6307-4262-ae98-3aa3ff2da124",
    "metadata": {},
-   "source": [
-    "### 2. Job-Wahrscheinlichkeiten"
-   ]
+   "source": "### 2. Routings probabilities"
   },
   {
    "cell_type": "code",
    "id": "b808ec0f-c8be-4ab4-8294-2f5227669489",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:22.380019Z",
-     "start_time": "2025-07-25T19:59:22.376750Z"
+     "end_time": "2025-07-27T21:02:37.586393Z",
+     "start_time": "2025-07-27T21:02:37.582959Z"
     }
    },
    "source": [
-    "# Anzahl unterschiedlicher Jobs\n",
+    "# Number of different Routings\n",
     "n_routings = df_routings['Routing_ID'].nunique()\n",
     "\n",
     "p = [1.0 / n_routings] * n_routings\n",
@@ -312,19 +300,19 @@
        "[0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
    "id": "6ed94c87-563a-4d0f-9a74-271355681992",
    "metadata": {},
    "source": [
-    "### 3. Berechne die mittlere Zwischenankunftszeit t_a nach Formel (7.16) \n",
+    "### 3. Calculate the average inter-arrival time t_a using the formula (7.16)\n",
     "> All-in-One"
    ]
   },
@@ -333,8 +321,8 @@
    "id": "50101568-a2ec-4ac4-bd99-66d50ac98fa1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:30.819107Z",
-     "start_time": "2025-07-25T19:59:30.814737Z"
+     "end_time": "2025-07-27T21:02:37.685911Z",
+     "start_time": "2025-07-27T21:02:37.680768Z"
     }
    },
    "source": [
@@ -348,28 +336,26 @@
        "70.11"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
    "id": "b0d3a601-1bd8-4322-b2ba-17e8a3877bec",
    "metadata": {},
-   "source": [
-    "## II) Ankunftszeiten"
-   ]
+   "source": "## II) Arrival times"
   },
   {
    "cell_type": "markdown",
    "id": "7c70f912-39f2-4d7d-bc77-430a6efc1082",
    "metadata": {},
    "source": [
-    "#### Generierung exponentiell verteilte Zwischenankunftszeiten mit Mittelwert t_a \n",
-    "#### mit eine zufällige Job-Reihenfolge"
+    "#### Generation of exponentially distributed inter-arrival times with mean t_a\n",
+    "#### with a random job sequence"
    ]
   },
   {
@@ -377,12 +363,12 @@
    "id": "06a10e09-a403-4e15-ae75-01d9edc703ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:59:35.460865Z",
-     "start_time": "2025-07-25T19:59:35.451190Z"
+     "end_time": "2025-07-27T21:02:37.773358Z",
+     "start_time": "2025-07-27T21:02:37.762979Z"
     }
    },
    "source": [
-    "df_jssp = init.generate_jobs_from_routings(df_routings, shuffle = False)\n",
+    "df_jssp = init.generate_jobs_from_routings(df_routings, shuffle = True)\n",
     "df_jobs = df_jssp[[\"Job\", \"Routing_ID\"]].drop_duplicates()\n",
     "\n",
     "arrivals = term.generate_arrivals_from_mean_interarrival_time(10, t_a)\n",
@@ -395,16 +381,16 @@
      "data": {
       "text/plain": [
        "         Job  Routing_ID  Arrival\n",
-       "0   J25-0000           0       11\n",
-       "10  J25-0001           1       96\n",
-       "20  J25-0002           2      118\n",
-       "30  J25-0003           3      160\n",
-       "40  J25-0004           4      197\n",
-       "50  J25-0005           5      263\n",
-       "60  J25-0006           6      324\n",
-       "70  J25-0007           7      341\n",
-       "80  J25-0008           8      356\n",
-       "90  J25-0009           9      441"
+       "0   J25-0000           8       11\n",
+       "10  J25-0001           6       96\n",
+       "20  J25-0002           0      118\n",
+       "30  J25-0003           2      160\n",
+       "40  J25-0004           3      197\n",
+       "50  J25-0005           1      263\n",
+       "60  J25-0006           9      324\n",
+       "70  J25-0007           5      341\n",
+       "80  J25-0008           4      356\n",
+       "90  J25-0009           7      441"
       ],
       "text/html": [
        "<div>\n",
@@ -434,61 +420,61 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>J25-0000</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>J25-0001</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>J25-0002</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>J25-0003</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>J25-0004</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
        "      <td>J25-0005</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "      <td>263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60</th>\n",
        "      <td>J25-0006</td>\n",
-       "      <td>6</td>\n",
+       "      <td>9</td>\n",
        "      <td>324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
        "      <td>J25-0007</td>\n",
-       "      <td>7</td>\n",
+       "      <td>5</td>\n",
        "      <td>341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80</th>\n",
        "      <td>J25-0008</td>\n",
-       "      <td>8</td>\n",
+       "      <td>4</td>\n",
        "      <td>356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90</th>\n",
        "      <td>J25-0009</td>\n",
-       "      <td>9</td>\n",
+       "      <td>7</td>\n",
        "      <td>441</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -496,12 +482,12 @@
        "</div>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 7
   }
  ],
  "metadata": {
