--- a/notebooks/02_Google_OR-Tools_Constraint_Programming/01_Lateness.ipynb
+++ b/notebooks/02_Google_OR-Tools_Constraint_Programming/01_Lateness.ipynb
@@ -77,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "# Harte Abbruchbedingung für die Scheduler\n",
+    "# Hard termination condition for schedulers\n",
     "max_time = 60*3     # 3 min\n",
     "\n",
     "# Simulation\n",
